src/y.output
Terminals unused in grammar

   SIZEOF
   PTR
   DOT
   TYPEDEF
   SWITCH
   CASE
   DEFAULT
   SCANF
   ASSIGN
   ARRAY
   FUNCTION
   MAIN
   AND
   OR


Grammar

    0 $accept: start $end

    1 start: Function start
    2      | Declaration start
    3      | PREPROC start
    4      | %empty

    5 Declaration: Type Assignment ';'
    6            | Assignment ';'
    7            | FunctionCall ';'
    8            | ArrayUsage ';'
    9            | Type ArrayUsage ';'
   10            | StructStmt ';'
   11            | error

   12 $@1: %empty

   13 $@2: %empty

   14 Assignment: ID $@1 assign_operator $@2 Expression
   15           | ArrayUsage assign_operator Expression
   16           | ID ',' Assignment
   17           | NUM ',' Assignment
   18           | ID
   19           | NUM

   20 assign_operator: '='
   21                | MUL_ASSIGN
   22                | SUB_ASSIGN
   23                | DIV_ASSIGN
   24                | ADD_ASSIGN

   25 $@3: %empty

   26 Expr: Expression RelOP $@3 Expression

   27 RelOP: LE
   28      | GE
   29      | NE
   30      | EQ
   31      | GT
   32      | LT

   33 $@4: %empty

   34 Expression: Expression '+' $@4 Expression

   35 $@5: %empty

   36 Expression: Expression '-' $@5 Expression

   37 $@6: %empty

   38 Expression: Expression '*' $@6 Expression

   39 $@7: %empty

   40 Expression: Expression '/' $@7 Expression
   41           | '(' Expression ')'
   42           | NUM
   43           | REAL
   44           | ID
   45           | ArrayUsage
   46           | FunctionCall

   47 FunctionCall: ID '(' ')'
   48             | ID '(' Assignment ')'

   49 ArrayUsage: ID '[' Expression ']'

   50 Function: Type ID '(' ArgListOpt ')' CompoundStmt

   51 ArgListOpt: ArgList
   52           | %empty

   53 ArgList: ArgList ',' Arg
   54        | Arg

   55 Arg: Type ID

   56 CompoundStmt: '{' StmtList '}'

   57 StmtList: StmtList Stmt
   58         | %empty

   59 Stmt: WhileStmt
   60     | DoWhileStmt
   61     | Declaration
   62     | ForStmt
   63     | IfStmt
   64     | PrintFunc
   65     | ';'
   66     | RETURN ';'
   67     | RETURN Assignment ';'
   68     | BREAK ';'
   69     | CONTINUE ';'

   70 Type: INT
   71     | FLOAT
   72     | VOID

   73 $@8: %empty

   74 $@9: %empty

   75 WhileStmt: WHILE $@8 '(' Expr ')' $@9 WhileCon

   76 WhileCon: Stmt
   77         | CompoundStmt

   78 $@10: %empty

   79 DoWhileStmt: DO $@10 Stmt WHILE '(' Expr ')' ';'

   80 $@11: %empty

   81 DoWhileStmt: DO $@11 CompoundStmt WHILE '(' Expr ')' ';'

   82 $@12: %empty

   83 $@13: %empty

   84 $@14: %empty

   85 ForStmt: FOR '(' Assignment $@12 ';' Expr $@13 ';' Assignment $@14 ')' ForCon

   86 ForCon: Stmt
   87       | CompoundStmt

   88 $@15: %empty

   89 IfStmt: IF '(' Expr ')' $@15 Stmt

   90 $@16: %empty

   91 IfStmt: IF '(' Expr ')' $@16 Else

   92 $@17: %empty

   93 Else: CompoundStmt $@17 ELSE CompoundStmt
   94     | CompoundStmt

   95 StructStmt: STRUCT ID '{' Type Assignment ';' '}'

   96 PrintFunc: PRINTF '(' STRING ')' ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 41 47 48 50 75 79 81 85 89 91 96
')' (41) 41 47 48 50 75 79 81 85 89 91 96
'*' (42) 38
'+' (43) 34
',' (44) 16 17 53
'-' (45) 36
'/' (47) 40
';' (59) 5 6 7 8 9 10 65 66 67 68 69 79 81 85 95 96
'=' (61) 20
'[' (91) 49
']' (93) 49
'{' (123) 56 95
'}' (125) 56 95
error (256) 11
ID (258) 14 16 18 44 47 48 49 50 55 95
NUM (259) 17 19 42
REAL (260) 43
SIZEOF (261)
PTR (262)
DOT (263)
TYPEDEF (264)
STRUCT (265) 95
INT (266) 70
FLOAT (267) 71
VOID (268) 72
IF (269) 89 91
ELSE (270) 93
WHILE (271) 75 79 81
RETURN (272) 66 67
FOR (273) 85
DO (274) 79 81
SWITCH (275)
CASE (276)
BREAK (277) 68
DEFAULT (278)
CONTINUE (279) 69
PRINTF (280) 96
SCANF (281)
STRING (282) 96
PREPROC (283) 3
ASSIGN (284)
MUL_ASSIGN (285) 21
SUB_ASSIGN (286) 22
DIV_ASSIGN (287) 23
ADD_ASSIGN (288) 24
ARRAY (289)
FUNCTION (290)
MAIN (291)
GT (292) 31
LT (293) 32
LE (294) 27
GE (295) 28
NE (296) 29
EQ (297) 30
AND (298)
OR (299)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
start (59)
    on left: 1 2 3 4, on right: 0 1 2 3
Declaration (60)
    on left: 5 6 7 8 9 10 11, on right: 2 61
Assignment (61)
    on left: 14 15 16 17 18 19, on right: 5 6 16 17 48 67 85 95
$@1 (62)
    on left: 12, on right: 14
$@2 (63)
    on left: 13, on right: 14
assign_operator (64)
    on left: 20 21 22 23 24, on right: 14 15
Expr (65)
    on left: 26, on right: 75 79 81 85 89 91
$@3 (66)
    on left: 25, on right: 26
RelOP (67)
    on left: 27 28 29 30 31 32, on right: 26
Expression (68)
    on left: 34 36 38 40 41 42 43 44 45 46, on right: 14 15 26 34 36
    38 40 41 49
$@4 (69)
    on left: 33, on right: 34
$@5 (70)
    on left: 35, on right: 36
$@6 (71)
    on left: 37, on right: 38
$@7 (72)
    on left: 39, on right: 40
FunctionCall (73)
    on left: 47 48, on right: 7 46
ArrayUsage (74)
    on left: 49, on right: 8 9 15 45
Function (75)
    on left: 50, on right: 1
ArgListOpt (76)
    on left: 51 52, on right: 50
ArgList (77)
    on left: 53 54, on right: 51 53
Arg (78)
    on left: 55, on right: 53 54
CompoundStmt (79)
    on left: 56, on right: 50 77 81 87 93 94
StmtList (80)
    on left: 57 58, on right: 56 57
Stmt (81)
    on left: 59 60 61 62 63 64 65 66 67 68 69, on right: 57 76 79 86
    89
Type (82)
    on left: 70 71 72, on right: 5 9 50 55 95
WhileStmt (83)
    on left: 75, on right: 59
$@8 (84)
    on left: 73, on right: 75
$@9 (85)
    on left: 74, on right: 75
WhileCon (86)
    on left: 76 77, on right: 75
DoWhileStmt (87)
    on left: 79 81, on right: 60
$@10 (88)
    on left: 78, on right: 79
$@11 (89)
    on left: 80, on right: 81
ForStmt (90)
    on left: 85, on right: 62
$@12 (91)
    on left: 82, on right: 85
$@13 (92)
    on left: 83, on right: 85
$@14 (93)
    on left: 84, on right: 85
ForCon (94)
    on left: 86 87, on right: 85
IfStmt (95)
    on left: 89 91, on right: 63
$@15 (96)
    on left: 88, on right: 89
$@16 (97)
    on left: 90, on right: 91
Else (98)
    on left: 93 94, on right: 91
$@17 (99)
    on left: 92, on right: 93
StructStmt (100)
    on left: 95, on right: 10
PrintFunc (101)
    on left: 96, on right: 64


State 0

    0 $accept: . start $end

    error    shift, and go to state 1
    ID       shift, and go to state 2
    NUM      shift, and go to state 3
    STRUCT   shift, and go to state 4
    INT      shift, and go to state 5
    FLOAT    shift, and go to state 6
    VOID     shift, and go to state 7
    PREPROC  shift, and go to state 8

    $end  reduce using rule 4 (start)

    start         go to state 9
    Declaration   go to state 10
    Assignment    go to state 11
    FunctionCall  go to state 12
    ArrayUsage    go to state 13
    Function      go to state 14
    Type          go to state 15
    StructStmt    go to state 16


State 1

   11 Declaration: error .

    $default  reduce using rule 11 (Declaration)


State 2

   14 Assignment: ID . $@1 assign_operator $@2 Expression
   16           | ID . ',' Assignment
   18           | ID .
   47 FunctionCall: ID . '(' ')'
   48             | ID . '(' Assignment ')'
   49 ArrayUsage: ID . '[' Expression ']'

    ','  shift, and go to state 17
    '('  shift, and go to state 18
    '['  shift, and go to state 19

    ';'       reduce using rule 18 (Assignment)
    $default  reduce using rule 12 ($@1)

    $@1  go to state 20


State 3

   17 Assignment: NUM . ',' Assignment
   19           | NUM .

    ','  shift, and go to state 21

    $default  reduce using rule 19 (Assignment)


State 4

   95 StructStmt: STRUCT . ID '{' Type Assignment ';' '}'

    ID  shift, and go to state 22


State 5

   70 Type: INT .

    $default  reduce using rule 70 (Type)


State 6

   71 Type: FLOAT .

    $default  reduce using rule 71 (Type)


State 7

   72 Type: VOID .

    $default  reduce using rule 72 (Type)


State 8

    3 start: PREPROC . start

    error    shift, and go to state 1
    ID       shift, and go to state 2
    NUM      shift, and go to state 3
    STRUCT   shift, and go to state 4
    INT      shift, and go to state 5
    FLOAT    shift, and go to state 6
    VOID     shift, and go to state 7
    PREPROC  shift, and go to state 8

    $end  reduce using rule 4 (start)

    start         go to state 23
    Declaration   go to state 10
    Assignment    go to state 11
    FunctionCall  go to state 12
    ArrayUsage    go to state 13
    Function      go to state 14
    Type          go to state 15
    StructStmt    go to state 16


State 9

    0 $accept: start . $end

    $end  shift, and go to state 24


State 10

    2 start: Declaration . start

    error    shift, and go to state 1
    ID       shift, and go to state 2
    NUM      shift, and go to state 3
    STRUCT   shift, and go to state 4
    INT      shift, and go to state 5
    FLOAT    shift, and go to state 6
    VOID     shift, and go to state 7
    PREPROC  shift, and go to state 8

    $end  reduce using rule 4 (start)

    start         go to state 25
    Declaration   go to state 10
    Assignment    go to state 11
    FunctionCall  go to state 12
    ArrayUsage    go to state 13
    Function      go to state 14
    Type          go to state 15
    StructStmt    go to state 16


State 11

    6 Declaration: Assignment . ';'

    ';'  shift, and go to state 26


State 12

    7 Declaration: FunctionCall . ';'

    ';'  shift, and go to state 27


State 13

    8 Declaration: ArrayUsage . ';'
   15 Assignment: ArrayUsage . assign_operator Expression

    MUL_ASSIGN  shift, and go to state 28
    SUB_ASSIGN  shift, and go to state 29
    DIV_ASSIGN  shift, and go to state 30
    ADD_ASSIGN  shift, and go to state 31
    ';'         shift, and go to state 32
    '='         shift, and go to state 33

    assign_operator  go to state 34


State 14

    1 start: Function . start

    error    shift, and go to state 1
    ID       shift, and go to state 2
    NUM      shift, and go to state 3
    STRUCT   shift, and go to state 4
    INT      shift, and go to state 5
    FLOAT    shift, and go to state 6
    VOID     shift, and go to state 7
    PREPROC  shift, and go to state 8

    $end  reduce using rule 4 (start)

    start         go to state 35
    Declaration   go to state 10
    Assignment    go to state 11
    FunctionCall  go to state 12
    ArrayUsage    go to state 13
    Function      go to state 14
    Type          go to state 15
    StructStmt    go to state 16


State 15

    5 Declaration: Type . Assignment ';'
    9            | Type . ArrayUsage ';'
   50 Function: Type . ID '(' ArgListOpt ')' CompoundStmt

    ID   shift, and go to state 36
    NUM  shift, and go to state 3

    Assignment  go to state 37
    ArrayUsage  go to state 38


State 16

   10 Declaration: StructStmt . ';'

    ';'  shift, and go to state 39


State 17

   16 Assignment: ID ',' . Assignment

    ID   shift, and go to state 40
    NUM  shift, and go to state 3

    Assignment  go to state 41
    ArrayUsage  go to state 42


State 18

   47 FunctionCall: ID '(' . ')'
   48             | ID '(' . Assignment ')'

    ID   shift, and go to state 40
    NUM  shift, and go to state 3
    ')'  shift, and go to state 43

    Assignment  go to state 44
    ArrayUsage  go to state 42


State 19

   49 ArrayUsage: ID '[' . Expression ']'

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expression    go to state 49
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 20

   14 Assignment: ID $@1 . assign_operator $@2 Expression

    MUL_ASSIGN  shift, and go to state 28
    SUB_ASSIGN  shift, and go to state 29
    DIV_ASSIGN  shift, and go to state 30
    ADD_ASSIGN  shift, and go to state 31
    '='         shift, and go to state 33

    assign_operator  go to state 52


State 21

   17 Assignment: NUM ',' . Assignment

    ID   shift, and go to state 40
    NUM  shift, and go to state 3

    Assignment  go to state 53
    ArrayUsage  go to state 42


State 22

   95 StructStmt: STRUCT ID . '{' Type Assignment ';' '}'

    '{'  shift, and go to state 54


State 23

    3 start: PREPROC start .

    $default  reduce using rule 3 (start)


State 24

    0 $accept: start $end .

    $default  accept


State 25

    2 start: Declaration start .

    $default  reduce using rule 2 (start)


State 26

    6 Declaration: Assignment ';' .

    $default  reduce using rule 6 (Declaration)


State 27

    7 Declaration: FunctionCall ';' .

    $default  reduce using rule 7 (Declaration)


State 28

   21 assign_operator: MUL_ASSIGN .

    $default  reduce using rule 21 (assign_operator)


State 29

   22 assign_operator: SUB_ASSIGN .

    $default  reduce using rule 22 (assign_operator)


State 30

   23 assign_operator: DIV_ASSIGN .

    $default  reduce using rule 23 (assign_operator)


State 31

   24 assign_operator: ADD_ASSIGN .

    $default  reduce using rule 24 (assign_operator)


State 32

    8 Declaration: ArrayUsage ';' .

    $default  reduce using rule 8 (Declaration)


State 33

   20 assign_operator: '=' .

    $default  reduce using rule 20 (assign_operator)


State 34

   15 Assignment: ArrayUsage assign_operator . Expression

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expression    go to state 55
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 35

    1 start: Function start .

    $default  reduce using rule 1 (start)


State 36

   14 Assignment: ID . $@1 assign_operator $@2 Expression
   16           | ID . ',' Assignment
   18           | ID .
   49 ArrayUsage: ID . '[' Expression ']'
   50 Function: Type ID . '(' ArgListOpt ')' CompoundStmt

    ','  shift, and go to state 17
    '('  shift, and go to state 56
    '['  shift, and go to state 19

    ';'       reduce using rule 18 (Assignment)
    $default  reduce using rule 12 ($@1)

    $@1  go to state 20


State 37

    5 Declaration: Type Assignment . ';'

    ';'  shift, and go to state 57


State 38

    9 Declaration: Type ArrayUsage . ';'
   15 Assignment: ArrayUsage . assign_operator Expression

    MUL_ASSIGN  shift, and go to state 28
    SUB_ASSIGN  shift, and go to state 29
    DIV_ASSIGN  shift, and go to state 30
    ADD_ASSIGN  shift, and go to state 31
    ';'         shift, and go to state 58
    '='         shift, and go to state 33

    assign_operator  go to state 34


State 39

   10 Declaration: StructStmt ';' .

    $default  reduce using rule 10 (Declaration)


State 40

   14 Assignment: ID . $@1 assign_operator $@2 Expression
   16           | ID . ',' Assignment
   18           | ID .
   49 ArrayUsage: ID . '[' Expression ']'

    ','  shift, and go to state 17
    '['  shift, and go to state 19

    ';'       reduce using rule 18 (Assignment)
    ')'       reduce using rule 18 (Assignment)
    $default  reduce using rule 12 ($@1)

    $@1  go to state 20


State 41

   16 Assignment: ID ',' Assignment .

    $default  reduce using rule 16 (Assignment)


State 42

   15 Assignment: ArrayUsage . assign_operator Expression

    MUL_ASSIGN  shift, and go to state 28
    SUB_ASSIGN  shift, and go to state 29
    DIV_ASSIGN  shift, and go to state 30
    ADD_ASSIGN  shift, and go to state 31
    '='         shift, and go to state 33

    assign_operator  go to state 34


State 43

   47 FunctionCall: ID '(' ')' .

    $default  reduce using rule 47 (FunctionCall)


State 44

   48 FunctionCall: ID '(' Assignment . ')'

    ')'  shift, and go to state 59


State 45

   44 Expression: ID .
   47 FunctionCall: ID . '(' ')'
   48             | ID . '(' Assignment ')'
   49 ArrayUsage: ID . '[' Expression ']'

    '('  shift, and go to state 18
    '['  shift, and go to state 19

    $default  reduce using rule 44 (Expression)


State 46

   42 Expression: NUM .

    $default  reduce using rule 42 (Expression)


State 47

   43 Expression: REAL .

    $default  reduce using rule 43 (Expression)


State 48

   41 Expression: '(' . Expression ')'

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expression    go to state 60
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 49

   34 Expression: Expression . '+' $@4 Expression
   36           | Expression . '-' $@5 Expression
   38           | Expression . '*' $@6 Expression
   40           | Expression . '/' $@7 Expression
   49 ArrayUsage: ID '[' Expression . ']'

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64
    ']'  shift, and go to state 65


State 50

   46 Expression: FunctionCall .

    $default  reduce using rule 46 (Expression)


State 51

   45 Expression: ArrayUsage .

    $default  reduce using rule 45 (Expression)


State 52

   14 Assignment: ID $@1 assign_operator . $@2 Expression

    $default  reduce using rule 13 ($@2)

    $@2  go to state 66


State 53

   17 Assignment: NUM ',' Assignment .

    $default  reduce using rule 17 (Assignment)


State 54

   95 StructStmt: STRUCT ID '{' . Type Assignment ';' '}'

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    Type  go to state 67


State 55

   15 Assignment: ArrayUsage assign_operator Expression .
   34 Expression: Expression . '+' $@4 Expression
   36           | Expression . '-' $@5 Expression
   38           | Expression . '*' $@6 Expression
   40           | Expression . '/' $@7 Expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 15 (Assignment)


State 56

   50 Function: Type ID '(' . ArgListOpt ')' CompoundStmt

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    $default  reduce using rule 52 (ArgListOpt)

    ArgListOpt  go to state 68
    ArgList     go to state 69
    Arg         go to state 70
    Type        go to state 71


State 57

    5 Declaration: Type Assignment ';' .

    $default  reduce using rule 5 (Declaration)


State 58

    9 Declaration: Type ArrayUsage ';' .

    $default  reduce using rule 9 (Declaration)


State 59

   48 FunctionCall: ID '(' Assignment ')' .

    $default  reduce using rule 48 (FunctionCall)


State 60

   34 Expression: Expression . '+' $@4 Expression
   36           | Expression . '-' $@5 Expression
   38           | Expression . '*' $@6 Expression
   40           | Expression . '/' $@7 Expression
   41           | '(' Expression . ')'

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64
    ')'  shift, and go to state 72


State 61

   34 Expression: Expression '+' . $@4 Expression

    $default  reduce using rule 33 ($@4)

    $@4  go to state 73


State 62

   36 Expression: Expression '-' . $@5 Expression

    $default  reduce using rule 35 ($@5)

    $@5  go to state 74


State 63

   38 Expression: Expression '*' . $@6 Expression

    $default  reduce using rule 37 ($@6)

    $@6  go to state 75


State 64

   40 Expression: Expression '/' . $@7 Expression

    $default  reduce using rule 39 ($@7)

    $@7  go to state 76


State 65

   49 ArrayUsage: ID '[' Expression ']' .

    $default  reduce using rule 49 (ArrayUsage)


State 66

   14 Assignment: ID $@1 assign_operator $@2 . Expression

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expression    go to state 77
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 67

   95 StructStmt: STRUCT ID '{' Type . Assignment ';' '}'

    ID   shift, and go to state 40
    NUM  shift, and go to state 3

    Assignment  go to state 78
    ArrayUsage  go to state 42


State 68

   50 Function: Type ID '(' ArgListOpt . ')' CompoundStmt

    ')'  shift, and go to state 79


State 69

   51 ArgListOpt: ArgList .
   53 ArgList: ArgList . ',' Arg

    ','  shift, and go to state 80

    $default  reduce using rule 51 (ArgListOpt)


State 70

   54 ArgList: Arg .

    $default  reduce using rule 54 (ArgList)


State 71

   55 Arg: Type . ID

    ID  shift, and go to state 81


State 72

   41 Expression: '(' Expression ')' .

    $default  reduce using rule 41 (Expression)


State 73

   34 Expression: Expression '+' $@4 . Expression

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expression    go to state 82
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 74

   36 Expression: Expression '-' $@5 . Expression

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expression    go to state 83
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 75

   38 Expression: Expression '*' $@6 . Expression

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expression    go to state 84
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 76

   40 Expression: Expression '/' $@7 . Expression

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expression    go to state 85
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 77

   14 Assignment: ID $@1 assign_operator $@2 Expression .
   34 Expression: Expression . '+' $@4 Expression
   36           | Expression . '-' $@5 Expression
   38           | Expression . '*' $@6 Expression
   40           | Expression . '/' $@7 Expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 14 (Assignment)


State 78

   95 StructStmt: STRUCT ID '{' Type Assignment . ';' '}'

    ';'  shift, and go to state 86


State 79

   50 Function: Type ID '(' ArgListOpt ')' . CompoundStmt

    '{'  shift, and go to state 87

    CompoundStmt  go to state 88


State 80

   53 ArgList: ArgList ',' . Arg

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    Arg   go to state 89
    Type  go to state 71


State 81

   55 Arg: Type ID .

    $default  reduce using rule 55 (Arg)


State 82

   34 Expression: Expression . '+' $@4 Expression
   34           | Expression '+' $@4 Expression .
   36           | Expression . '-' $@5 Expression
   38           | Expression . '*' $@6 Expression
   40           | Expression . '/' $@7 Expression

    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 34 (Expression)


State 83

   34 Expression: Expression . '+' $@4 Expression
   36           | Expression . '-' $@5 Expression
   36           | Expression '-' $@5 Expression .
   38           | Expression . '*' $@6 Expression
   40           | Expression . '/' $@7 Expression

    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 36 (Expression)


State 84

   34 Expression: Expression . '+' $@4 Expression
   36           | Expression . '-' $@5 Expression
   38           | Expression . '*' $@6 Expression
   38           | Expression '*' $@6 Expression .
   40           | Expression . '/' $@7 Expression

    $default  reduce using rule 38 (Expression)


State 85

   34 Expression: Expression . '+' $@4 Expression
   36           | Expression . '-' $@5 Expression
   38           | Expression . '*' $@6 Expression
   40           | Expression . '/' $@7 Expression
   40           | Expression '/' $@7 Expression .

    $default  reduce using rule 40 (Expression)


State 86

   95 StructStmt: STRUCT ID '{' Type Assignment ';' . '}'

    '}'  shift, and go to state 90


State 87

   56 CompoundStmt: '{' . StmtList '}'

    $default  reduce using rule 58 (StmtList)

    StmtList  go to state 91


State 88

   50 Function: Type ID '(' ArgListOpt ')' CompoundStmt .

    $default  reduce using rule 50 (Function)


State 89

   53 ArgList: ArgList ',' Arg .

    $default  reduce using rule 53 (ArgList)


State 90

   95 StructStmt: STRUCT ID '{' Type Assignment ';' '}' .

    $default  reduce using rule 95 (StructStmt)


State 91

   56 CompoundStmt: '{' StmtList . '}'
   57 StmtList: StmtList . Stmt

    error     shift, and go to state 1
    ID        shift, and go to state 2
    NUM       shift, and go to state 3
    STRUCT    shift, and go to state 4
    INT       shift, and go to state 5
    FLOAT     shift, and go to state 6
    VOID      shift, and go to state 7
    IF        shift, and go to state 92
    WHILE     shift, and go to state 93
    RETURN    shift, and go to state 94
    FOR       shift, and go to state 95
    DO        shift, and go to state 96
    BREAK     shift, and go to state 97
    CONTINUE  shift, and go to state 98
    PRINTF    shift, and go to state 99
    ';'       shift, and go to state 100
    '}'       shift, and go to state 101

    Declaration   go to state 102
    Assignment    go to state 11
    FunctionCall  go to state 12
    ArrayUsage    go to state 13
    Stmt          go to state 103
    Type          go to state 104
    WhileStmt     go to state 105
    DoWhileStmt   go to state 106
    ForStmt       go to state 107
    IfStmt        go to state 108
    StructStmt    go to state 16
    PrintFunc     go to state 109


State 92

   89 IfStmt: IF . '(' Expr ')' $@15 Stmt
   91       | IF . '(' Expr ')' $@16 Else

    '('  shift, and go to state 110


State 93

   75 WhileStmt: WHILE . $@8 '(' Expr ')' $@9 WhileCon

    $default  reduce using rule 73 ($@8)

    $@8  go to state 111


State 94

   66 Stmt: RETURN . ';'
   67     | RETURN . Assignment ';'

    ID   shift, and go to state 40
    NUM  shift, and go to state 3
    ';'  shift, and go to state 112

    Assignment  go to state 113
    ArrayUsage  go to state 42


State 95

   85 ForStmt: FOR . '(' Assignment $@12 ';' Expr $@13 ';' Assignment $@14 ')' ForCon

    '('  shift, and go to state 114


State 96

   79 DoWhileStmt: DO . $@10 Stmt WHILE '(' Expr ')' ';'
   81            | DO . $@11 CompoundStmt WHILE '(' Expr ')' ';'

    '{'       reduce using rule 80 ($@11)
    $default  reduce using rule 78 ($@10)

    $@10  go to state 115
    $@11  go to state 116


State 97

   68 Stmt: BREAK . ';'

    ';'  shift, and go to state 117


State 98

   69 Stmt: CONTINUE . ';'

    ';'  shift, and go to state 118


State 99

   96 PrintFunc: PRINTF . '(' STRING ')' ';'

    '('  shift, and go to state 119


State 100

   65 Stmt: ';' .

    $default  reduce using rule 65 (Stmt)


State 101

   56 CompoundStmt: '{' StmtList '}' .

    $default  reduce using rule 56 (CompoundStmt)


State 102

   61 Stmt: Declaration .

    $default  reduce using rule 61 (Stmt)


State 103

   57 StmtList: StmtList Stmt .

    $default  reduce using rule 57 (StmtList)


State 104

    5 Declaration: Type . Assignment ';'
    9            | Type . ArrayUsage ';'

    ID   shift, and go to state 40
    NUM  shift, and go to state 3

    Assignment  go to state 37
    ArrayUsage  go to state 38


State 105

   59 Stmt: WhileStmt .

    $default  reduce using rule 59 (Stmt)


State 106

   60 Stmt: DoWhileStmt .

    $default  reduce using rule 60 (Stmt)


State 107

   62 Stmt: ForStmt .

    $default  reduce using rule 62 (Stmt)


State 108

   63 Stmt: IfStmt .

    $default  reduce using rule 63 (Stmt)


State 109

   64 Stmt: PrintFunc .

    $default  reduce using rule 64 (Stmt)


State 110

   89 IfStmt: IF '(' . Expr ')' $@15 Stmt
   91       | IF '(' . Expr ')' $@16 Else

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expr          go to state 120
    Expression    go to state 121
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 111

   75 WhileStmt: WHILE $@8 . '(' Expr ')' $@9 WhileCon

    '('  shift, and go to state 122


State 112

   66 Stmt: RETURN ';' .

    $default  reduce using rule 66 (Stmt)


State 113

   67 Stmt: RETURN Assignment . ';'

    ';'  shift, and go to state 123


State 114

   85 ForStmt: FOR '(' . Assignment $@12 ';' Expr $@13 ';' Assignment $@14 ')' ForCon

    ID   shift, and go to state 40
    NUM  shift, and go to state 3

    Assignment  go to state 124
    ArrayUsage  go to state 42


State 115

   79 DoWhileStmt: DO $@10 . Stmt WHILE '(' Expr ')' ';'

    error     shift, and go to state 1
    ID        shift, and go to state 2
    NUM       shift, and go to state 3
    STRUCT    shift, and go to state 4
    INT       shift, and go to state 5
    FLOAT     shift, and go to state 6
    VOID      shift, and go to state 7
    IF        shift, and go to state 92
    WHILE     shift, and go to state 93
    RETURN    shift, and go to state 94
    FOR       shift, and go to state 95
    DO        shift, and go to state 96
    BREAK     shift, and go to state 97
    CONTINUE  shift, and go to state 98
    PRINTF    shift, and go to state 99
    ';'       shift, and go to state 100

    Declaration   go to state 102
    Assignment    go to state 11
    FunctionCall  go to state 12
    ArrayUsage    go to state 13
    Stmt          go to state 125
    Type          go to state 104
    WhileStmt     go to state 105
    DoWhileStmt   go to state 106
    ForStmt       go to state 107
    IfStmt        go to state 108
    StructStmt    go to state 16
    PrintFunc     go to state 109


State 116

   81 DoWhileStmt: DO $@11 . CompoundStmt WHILE '(' Expr ')' ';'

    '{'  shift, and go to state 87

    CompoundStmt  go to state 126


State 117

   68 Stmt: BREAK ';' .

    $default  reduce using rule 68 (Stmt)


State 118

   69 Stmt: CONTINUE ';' .

    $default  reduce using rule 69 (Stmt)


State 119

   96 PrintFunc: PRINTF '(' . STRING ')' ';'

    STRING  shift, and go to state 127


State 120

   89 IfStmt: IF '(' Expr . ')' $@15 Stmt
   91       | IF '(' Expr . ')' $@16 Else

    ')'  shift, and go to state 128


State 121

   26 Expr: Expression . RelOP $@3 Expression
   34 Expression: Expression . '+' $@4 Expression
   36           | Expression . '-' $@5 Expression
   38           | Expression . '*' $@6 Expression
   40           | Expression . '/' $@7 Expression

    GT   shift, and go to state 129
    LT   shift, and go to state 130
    LE   shift, and go to state 131
    GE   shift, and go to state 132
    NE   shift, and go to state 133
    EQ   shift, and go to state 134
    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    RelOP  go to state 135


State 122

   75 WhileStmt: WHILE $@8 '(' . Expr ')' $@9 WhileCon

    ID    shift, and go to state 45
    NUM   shift, and go to state 46
    REAL  shift, and go to state 47
    '('   shift, and go to state 48

    Expr          go to state 136
    Expression    go to state 121
    FunctionCall  go to state 50
    ArrayUsage    go to state 51


State 123

   67 Stmt: RETURN Assignment ';' .

    $default  reduce using rule 67 (Stmt)


State 124

   85 ForStmt: FOR '(' Assignment . $@12 ';' Expr $@13 ';' Assignment $@14 ')' ForCon

    $default  reduce using rule 82 ($@12)

    $@12  go to state 137


State 125

   79 DoWhileStmt: DO $@10 Stmt . WHILE '(' Expr ')' ';'

    WHILE  shift, and go to state 138


State 126

   81 DoWhileStmt: DO $@11 CompoundStmt . WHILE '(' Expr ')' ';'

    WHILE  shift, and go to state 139


State 127

   96 PrintFunc: PRINTF '(' STRING . ')' ';'

    ')'  shift, and go to state 140


State 128
